cambiamos el parrafo a un titulo
le agregamos una descripción

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Atix Innovations</title>
 </head>
 <body>
-<p>Bienvenido a Atix innovations</p>
+<h1>Bienvenido a Atix innovations</h1>
+<p>Empresa de desarrollo de software</p>
 </body>
 </html>
