agregamos otro parrafo
parrafo nuevo indicando como nos sentimos

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
 <h1>Bienvenido a Atix innovations</h1>
 <p>Empresa de desarrollo de software</p>
+<p>vamos por buen camino</p>
 </body>
 </html>
