--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 	<title>Atix Innovations</title>
+	<style type="text/css">
+		body{
+			background-color: green;
+		}
+	</style>
 </head>
 <body>
 <h1>Bienvenido a Atix innovations</h1>
